@@ -1,3 +1,5 @@
+2006/4/23 -- released version 20060423_trunk
+
 2006/4/22 -- released version 20060422_trunk
 
 2006/4/21 -- released version 20060421_trunk
